--- a/css/style.css
+++ b/css/style.css
@@ -64,29 +64,43 @@ input[type="radio"].visually-hidden {
 }
 
 .nav-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-navigation {
-    flex-grow: 1;
-    font-weight: 500;
-    line-height: 1.9;
-    text-transform: uppercase;
-    font-size: 16px;
-    color: #000000;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-weight: 500;
+  line-height: 1.9;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #000000;
 }
 
 .site-navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    margin-top: 11px;
-    list-style: none;
-    width: 440px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  padding: 0;
+  margin-top: 11px;
+  list-style: none;
+  width: 440px;
 }
 
 .site-navigation a {
@@ -120,13 +134,13 @@ input[type="radio"].visually-hidden {
     content: "";
     border-bottom: 3px solid #fb565a;
     padding-top: 3px;
-    margin-bottom: -3px;
+    margin-bottom: -6px;
 }
 
 .basket {
     margin: 0;
     padding: 0;
-    margin-top: 11px;
+    margin-top: 13px;
 }
 
 .basket a {
@@ -147,7 +161,9 @@ input[type="radio"].visually-hidden {
     height: 18px;
     text-align: center;
     font-size: 0;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 
 .slider-controls label {
@@ -265,12 +281,16 @@ input[type="radio"].visually-hidden {
 }
 
 .features-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-    margin-right: 60px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  margin-right: 60px;
 }
 
 .features h3 {
@@ -368,11 +388,18 @@ input[type="radio"].visually-hidden {
 }
 
 .about-us-desc {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 80px;
-    border-top: 2px solid #eeeeee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+  border-top: 2px solid #eeeeee;
+
 
 }
 
@@ -429,14 +456,17 @@ input[type="radio"].visually-hidden {
 .description-logo-table img {
     margin: 0;
     margin-bottom: 6px;
+    margin-top: 1px;
 }
 
 
-
+.description-table{
+  margin-left: -2px;
+}
 .description-table td {
     padding-bottom: 27px;
     padding-right: 18px;
-    padding-top: 10px;
+    padding-top: 9px;
 }
 
 .description-table td:last-child {
@@ -445,8 +475,8 @@ input[type="radio"].visually-hidden {
 
 .table-title {
     margin: 0;
-    margin-top: 23px;
-    margin-bottom: 47px;
+    margin-top: 25px;
+    margin-bottom: 49px;
     padding-left: 2px;
     text-align: center;
     line-height: 24px;
@@ -474,15 +504,16 @@ input[type="radio"].visually-hidden {
 
 
 .clients {
-  padding: 42px 0;
-  margin-bottom: 77px;
+  padding: 41px 0;
+  margin-bottom: 80px;
   border-top: 2px solid #eeeeee;
   border-bottom: 2px solid #eeeeee;
 }
 .clients-list {
   position: relative;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
@@ -499,10 +530,12 @@ input[type="radio"].visually-hidden {
 }
 
 .clients-logo a {
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-
-          align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+  align-items: center;
   min-height: 97px;
   opacity: 0.2;
 }
@@ -554,7 +587,7 @@ input[type="radio"].visually-hidden {
 
 .address h3 {
     margin: 0;
-    margin-bottom: 24px;
+    margin-bottom: 22px;
     margin-left: -28px;
     line-height: 30px;
     font-size: 18px;
@@ -566,7 +599,7 @@ input[type="radio"].visually-hidden {
 
 .address-info {
     margin: 0;
-    margin-bottom: 19px;
+    margin-bottom: 16px;
     font-size: 16px;
     line-height: 18px;
     text-transform: none;
@@ -578,41 +611,68 @@ input[type="radio"].visually-hidden {
 
 .tel {
     margin: 0;
-    margin-bottom: 37px;
+    margin-bottom: 39px;
     line-height: 18px;
     text-transform: none;
     text-align: left;
-    padding-left: 52px;
+    padding-right: 49px;
 
     color: #666666;
 }
 
 .contacts-us {
     width: 142px;
+    margin-top: 36px;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
     0% {
-        transform: translateY(-2000px);
+        -webkit-transform: translateY(-2000px);
+                transform: translateY(-2000px);
     }
 
     70% {
-        transform: translateY(30px);
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
     }
 
     90% {
-        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+                transform: translateY(-10px);
     }
 
     100% {
-        transform: translateY(0);
+        -webkit-transform: translateY(0);
+                transform: translateY(0);
+    }
+}
+@keyframes bounce {
+    0% {
+        -webkit-transform: translateY(-2000px);
+                transform: translateY(-2000px);
+    }
+
+    70% {
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-10px);
+                transform: translateY(-10px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+                transform: translateY(0);
     }
 }
 
-@keyframes shake {
+@-webkit-keyframes shake {
     0%,
   100% {
-        transform: translateX(0);
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
     }
 
     10%,
@@ -620,17 +680,42 @@ input[type="radio"].visually-hidden {
   50%,
   70%,
   90% {
-        transform: translateX(-10px);
+        -webkit-transform: translateX(-10px);
+                transform: translateX(-10px);
     }
 
     20%,
   40%,
   60%,
   80% {
-        transform: translateX(10px);
+        -webkit-transform: translateX(10px);
+                transform: translateX(10px);
     }
 }
+@keyframes shake {
+    0%,
+  100% {
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+    }
 
+    10%,
+  30%,
+  50%,
+  70%,
+  90% {
+        -webkit-transform: translateX(-10px);
+                transform: translateX(-10px);
+    }
+
+    20%,
+  40%,
+  60%,
+  80% {
+        -webkit-transform: translateX(10px);
+                transform: translateX(10px);
+    }
+}
 .contacts {
     position: fixed;
     left: 50%;
@@ -638,7 +723,8 @@ input[type="radio"].visually-hidden {
     z-index: auto;
     display: none;
     width: 960px;
-    box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+    -webkit-box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+            box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
     background-color: #ffffff;
     padding-top: 73px;
     margin-left: -480px;
@@ -646,17 +732,25 @@ input[type="radio"].visually-hidden {
 
 .contacts-show {
     display: block;
-    animation: bounce 0.6s;
+    -webkit-animation: bounce 0.6s;
+            animation: bounce 0.6s;
 }
 
 .contacts-error {
-    animation: shake 0.6s;
+    -webkit-animation: shake 0.6s;
+            animation: shake 0.6s;
 }
 
 .contacts-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 860px;
     margin-bottom: 49px;
 }
@@ -676,8 +770,12 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts-user {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding-bottom: 36px;
 }
 
@@ -693,6 +791,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts-item input {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 360px;
     padding-top: 18px;
@@ -750,13 +849,19 @@ input[type="radio"].visually-hidden {
 .social-list {
     padding: 0;
     margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
 }
-
 .main-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     color: #000000;
     background-color: #ffffff;
@@ -797,9 +902,15 @@ input[type="radio"].visually-hidden {
 }
 
 .social-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 79px;
     height: 79px;
     border-radius: 50px 50px 50px 50px;
@@ -825,7 +936,7 @@ input[type="radio"].visually-hidden {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 72px;
-    padding-bottom: 107px;
+    padding-bottom: 108px;
     font-weight: 500;
     font-size: 55px;
     line-height: 1;
@@ -871,7 +982,7 @@ input[type="radio"].visually-hidden {
 
 .cost legend {
     padding-right: 145px;
-    margin-bottom: 48px;
+    margin-bottom: 47px;
     padding-top: 3px;
     letter-spacing: 0.7px;
 }
@@ -912,7 +1023,9 @@ input[type="radio"].visually-hidden {
     padding: 0;
     border: 8px solid #ffffff;
     background-color: #ababab;
-    box-shadow: 0 2px 1px 0 #cfcfcf;
+    -webkit-box-shadow: 0 2px 1px 0 #cfcfcf;
+            box-shadow: 0 2px 1px 0 #cfcfcf;
+
     border-radius: 50%;
     cursor: pointer;
 }
@@ -926,8 +1039,12 @@ input[type="radio"].visually-hidden {
 }
 
 .price-controls {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 54px;
     font-size: 0;
     margin-right: 7px;
@@ -1061,8 +1178,12 @@ input[type="radio"].visually-hidden {
 }
 
 .sorting {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .sorting p {
@@ -1073,13 +1194,16 @@ input[type="radio"].visually-hidden {
     color: #000000;
     margin: 0;
     margin-bottom: 51px;
-    margin-right: 256px;
+    margin-right: 257px;
     text-transform: uppercase;
 }
 
 .sorting-option {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     margin-top: 4px;
@@ -1088,6 +1212,8 @@ input[type="radio"].visually-hidden {
 }
 
 .sorting-pointer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 0;
     padding-left: 29px;
@@ -1095,19 +1221,20 @@ input[type="radio"].visually-hidden {
 }
 
 .sorting-pointer {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     width: 41px;
     padding: 0;
     padding-top: 11px;
     margin-left: 13px;
 }
-}
 
-.sorting-option {
-    width: 276px;
-}
 
 .sorting-option li {
     letter-spacing: 0.2px;
@@ -1152,9 +1279,15 @@ input[type="radio"].visually-hidden {
 }
 
 .icon-direction {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 11px;
     height: 10px;
     fill: #eeeeee;
@@ -1170,8 +1303,12 @@ input[type="radio"].visually-hidden {
 }
 
 .container-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .catalog {
@@ -1179,8 +1316,13 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-bottom: 33px;
     list-style: none;
 }
@@ -1194,9 +1336,14 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0;
     padding: 0;
 }
@@ -1209,8 +1356,13 @@ input[type="radio"].visually-hidden {
 .add-info {
     position: absolute;
     bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
     width: 360px;
     background-color: #eeeeee;
@@ -1224,8 +1376,8 @@ input[type="radio"].visually-hidden {
 }
 
 .add-info p {
-    width: 190px;
-    padding-left: 86px;
+    padding-left: 51px;
+    padding-right: 51px;
     text-align: center;
     line-height: 18px;
     text-transform: none;
@@ -1266,7 +1418,7 @@ input[type="radio"].visually-hidden {
 
 .catalog-list-button {
     width: 122px;
-    margin-bottom: 41px;
+    margin-bottom: 42px;
 }
 
 .catalog-item:hover .add-info {
@@ -1278,15 +1430,21 @@ input[type="radio"].visually-hidden {
 }
 
 .pagination-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 453px;
     padding: 0;
     margin: 0;
     margin-left: 42px;
     margin-top: 26px;
-    margin-bottom: 59px;
+    margin-bottom: 58px;
 }
 
 .pagination-list li {
